package EJ31;

public enum Categoria {
    NOVELA,
    TEATRO,
    POESIA,
    ENSAYO
}
